Fixes the rendered sequence visualizer height being too big
+ Sets the rendered sequence visualizer bounding component's height such that it fills the screen and, importantly, accounts for the header height that takes up a portion of it.

--- a/src/App.css
+++ b/src/App.css
@@ -76,7 +76,7 @@
   margin: auto;
 }
 
-#part-explorer {
+.seqviz-container {
   height: 100vh;
   width: 100vw;
   display: flex;
@@ -91,10 +91,10 @@
 }
 
 #seqviewer {
-  min-height: 50vh;
-  width: 100vw;
+  /* height is 100% of the viewport height less the header height */
+  height: calc(100% - 64px);
+  width: 100%;
   margin: 0px;
-  overflow-y: none;
   flex: 1 1 0;
 }
 
